Bug 233163 - Slow wheel scrolling in KCategorizedView (Dolphin, Systemsettings)
Summary: Slow wheel scrolling in KCategorizedView (Dolphin, Systemsettings)
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Rafael Fernández López
URL:
Keywords:
: 233478 233830 235256 236926 237271 238293 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-03 12:59 UTC by Cyrill Helg
Modified: 2010-05-26 14:54 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrill Helg 2010-04-03 12:59:28 UTC
Version:           1.4 (using 4.4.2 (KDE 4.4.2), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.33-zen1-IBM-T43

Since the update to kde 4.2.2 dolphin scrolls the view slower than before. So the user must scroll his mouse wheel much more (like 2 or 3 times more).

A discussion can be found here, where others confirm this problem: http://forum.kde.org/viewtopic.php?f=66&t=86976


Please make dolphin scroll as fast as other apps again (kmail or kopete)
Comment 1 Peter Penz 2010-04-03 16:27:18 UTC
Thanks for your report, but could you please provide more details what you mean with "slow scrolling in dolphin (not performance)":
- Which view mode are you using? Icons, Details or Columns?
- Which zoom size do you have?
- How do you scroll: With the mouse wheel, the keyboard, the scrollbar or by the drag & drop mechanism when reaching the borders?
Comment 2 Maciej Warnecki 2010-04-03 16:33:24 UTC
Me:

1) It seems to happen only with Icons mode, both Details and Columns scroll 
correctly (much faster, the same they did before)

2) Icon size : 5th position from the left on the scrollbar (both for "Default" 
and "Preview") in Dolphin settings - that's for "Icons" mode, of course. 

3) I scroll with mouse wheel.
Comment 3 Peter Penz 2010-04-03 16:55:01 UTC
Thanks for the update. The speed seems to be OK for me: Assuming that around 3 - 5 items are in the icons view per line, the number of items per mouse wheel scroll are quite equal to the number of items that are scrolled in the details and column view. You mentioned kmail or kopete as comparison, but AFAIK the only use very small icons in the "details view"...

I've set this report as wish, so that other people can vote/comment on this topic.
Comment 4 Christoph Feck 2010-04-03 16:58:55 UTC
It is probably the side effect of the fix for bug 213068.
Comment 5 Thomas Brix Larsen 2010-04-03 19:30:26 UTC
Compare Dolphin with Konqueror to see the speed difference. This is clearly a regression. Is takes 8 scrolls (moving finger from top of wheel to bottom) to go through my homefolder with Konqueror vs 114 scrolls with Dolphin. There is 41 folders and 110 files in my homefolder.

Using Arch Linux with KDEmod.
Comment 6 Peter Penz 2010-04-03 21:07:58 UTC
Do you mean Konqueror for KDE 3? (Konqueror for KDE 4 uses the Dolphin part internally)
Comment 7 Maciej Warnecki 2010-04-03 21:08:54 UTC
Hey, I use Kdemod as well! You think it can be related? We need to know if it 
happens on non-kdemod packages as well.
Comment 8 Maciej Warnecki 2010-04-03 21:12:08 UTC
PS.: As seen on KDE forum, it happens for Mandriva as well.
Comment 9 Thomas Brix Larsen 2010-04-03 21:16:53 UTC
Konqueror from KDE 4.4.2 with the Dolphin kpart.
Comment 10 Thomas Brix Larsen 2010-04-03 22:11:44 UTC
It has to do with showing files in groups. If I disable that feature the speed returns to normal. Enabling again, the speed is still normal. Restart Dolphin and speed is slow again.
Comment 11 Maciej Warnecki 2010-04-04 09:10:14 UTC
@Thomas Larsen:

True. I experienced the very same behavior. Disable groups, everything is fast. Enable again, still fast. Restart Dolphin, all goes slow.
Comment 12 Peter Penz 2010-04-04 15:59:26 UTC
I've added Rafael to CC, he is the maintainer of the "groups view". However I think I should be able to track down the root cause as soon as I've some time.
Comment 13 Maciej Warnecki 2010-04-04 19:36:11 UTC
Guess what? 

I also observed the slow movement under System Settings>Desktop>Desktop 
effects>All effects when trying to scroll the effect list. 

You get the same behavior as well? It may be not only Dolphin-related.
Comment 14 Weng Xuetian 2010-04-06 05:51:23 UTC
@Maciej Warnecki
Yes, I think it may be the group view problem, if resize systemsettings window small and then the problem will be reproduced.

I see this problem only on group view, and if disable and enable group view in dolphin, this problem disappear temporarily though.. (until next start)

Creating new user doesn't help.
Comment 15 Christoph Feck 2010-04-07 03:04:52 UTC
*** Bug 233478 has been marked as a duplicate of this bug. ***
Comment 16 Christoph Feck 2010-04-07 03:14:54 UTC
Regression caused by the fix for bug 213068 (see bug 213068 comment #27)
Comment 17 Christoph Feck 2010-04-09 16:33:40 UTC
*** Bug 233830 has been marked as a duplicate of this bug. ***
Comment 18 Dion Moult 2010-04-24 18:03:52 UTC
*** Bug 235256 has been marked as a duplicate of this bug. ***
Comment 19 Christoph Feck 2010-04-25 02:09:06 UTC
SVN commit 1118520 by cfeck:

Never show horizontal scroll bar

Revert commit r1104321, and try a different workaround.

Something inside Qt causes an infinite layout recursion (see bug 213068),
but not updating scroll bar geometry causes a major usability regression
(see bug 233163).

The only workaround I can see for now is to force hiding the horizontal
scroll bar; KCategorizedView does not yet support it anyway.

BUG: 233163
CCBUG: 213068


 M  +4 -1      kcategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1118520
Comment 20 Christoph Feck 2010-04-25 02:10:23 UTC
SVN commit 1118521 by cfeck:

Never show horizontal scroll bar (backport r1118520)

Revert commit r1104322, and try a different workaround.

CCBUG: 233163
CCBUG: 213068


 M  +4 -1      kcategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1118521
Comment 21 Peter Penz 2010-04-25 19:11:54 UTC
Thanks a lot Christoph for taking care for this issue. It was on my TODO-list, but could not get it done yet...
Comment 22 Christoph Feck 2010-05-09 13:14:51 UTC
*** Bug 236926 has been marked as a duplicate of this bug. ***
Comment 23 Christoph Feck 2010-05-10 20:42:44 UTC
SVN commit 1125133 by cfeck:

Only hide horizontal scroll bar when isCategorized

The state of isCategorized can change when either the model
or the categoryDrawer is changed, so we need to update in either
case.

Please test this change in trunk; I will backport if there are
no further regressions.

BUG: 237109
CCBUG: 233163


 M  +6 -2      kcategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125133
Comment 24 Peter Penz 2010-05-11 21:32:42 UTC
*** Bug 237271 has been marked as a duplicate of this bug. ***
Comment 25 Christoph Feck 2010-05-20 18:48:33 UTC
*** Bug 238293 has been marked as a duplicate of this bug. ***