Never show horizontal scroll bar

Revert commit r1104321, and try a different workaround.

Something inside Qt causes an infinite layout recursion (see bug 213068),
but not updating scroll bar geometry causes a major usability regression
(see bug 233163).

The only workaround I can see for now is to force hiding the horizontal
scroll bar; KCategorizedView does not yet support it anyway.

BUG: 233163
CCBUG: 213068

svn path=/trunk/KDE/kdelibs/; revision=1118520